--- a/planning.tex
+++ b/planning.tex
@@ -42,19 +42,28 @@ for inductive problems.
   \boxsubtitle{Context}
 
   \begin{itemize}
-    \item \dots
+    \itemsep0em
+    \item Before putting a solution into production, we need to validate it.
+    \item The validation process is experimental.
   \end{itemize}
 
   \boxsubtitle{Objectives}
 
   \begin{itemize}
-    \item \dots
+    \itemsep0em
+    \item Understand the importance of experimental planning.
+    \item Learn the main evaluation metrics used in predictive tasks.
+    \item Learn how to design an experimental plan to validate a solution.
   \end{itemize}
 
   \boxsubtitle{Takeaways}
 
   \begin{itemize}
-    \item \dots
+    \itemsep0em
+    \item Evaluation metrics should be chosen according to the goals of the project.
+    \item The experimental plan should be designed to gather performance data
+      systematically.
+    \item A hypothesis test can be used to validate the results of the experiments.
   \end{itemize}
 \end{mainbox}
 
