--- a/preprocess.tex
+++ b/preprocess.tex
@@ -39,7 +39,7 @@ has no strategy to adjust the data to make it suitable for the model.
 
   \begin{itemize}
     \itemsep0em
-    \item Tidy data is not necessarily suitable for modeling;
+    \item Tidy data is not necessarily suitable for modeling.
     \item Parameters of the preprocessor are fitted rather than fixed.
   \end{itemize}
 
@@ -47,7 +47,7 @@ has no strategy to adjust the data to make it suitable for the model.
 
   \begin{itemize}
     \itemsep0em
-    \item Understand the main data preprocessing tasks and techniques;
+    \item Understand the main data preprocessing tasks and techniques.
     \item Learn the behavior of the preprocessing chain in terms of fitting, adjustment,
       and application.
   \end{itemize}
@@ -56,8 +56,8 @@ has no strategy to adjust the data to make it suitable for the model.
 
   \begin{itemize}
     \itemsep0em
-    \item Each learning method requires specific data preprocessing tasks;
-    \item Fitting the preprocessor is crucial to avoid leakage;
+    \item Each learning method requires specific data preprocessing tasks.
+    \item Fitting the preprocessor is crucial to avoid leakage.
     \item Default behavior of the model when the preprocessing chain degenerates must be
       specified.
   \end{itemize}
