--- a/about.tex
+++ b/about.tex
@@ -8,13 +8,13 @@ Federal University of São Paulo (UNIFESP) in Brazil.  I have been teaching this
 since 2021, and I have continually updated the material each year.
 
 Also, I was the coordinator of the Data Science Specialization Program (CEDS) at ITA.
-That experience, which included lots of administrative work, as well as teaching and
+That experience, which included a significant amount of administrative work, as well as teaching and
 supervising professionals in the course, has helped me to understand the needs of the
 market and the students.
 
 Moreover, parts of the project development methodology presented here came from my
 experience as a lead data scientist in R\&D projects for the Brazilian Air Force,
-which included projects in the areas of image processing, natural language processing,
+which included projects in areas such as image processing, natural language processing,
 and spatio-temporal data analysis.
 
 Literature provides us a wide range of excellent theoretical books on machine learning and
@@ -22,15 +22,15 @@ statistics, and highly regarded practical books on data science tools.  However,
 something that could provide a solid foundation on data science, covering all steps in a
 data science project, including its software engineering aspects.
 
-My goal is to provide a book that can be used as a textbook for a course on data science
+My goal is to provide a book that serve as a textbook for a course on data science
 projects or as a reference for professionals working in the field.  I strive to maintain a
-formal tone without compromising the practical aspects of the subject.  I do not focus on
-a specific tool or programming language, but rather aim to explain the semantics of data
+formal tone while preserving the practical aspects of the subject.  I do not focus on
+a specific tool or programming language, but rather seek to explain the semantics of data
 science tasks that can be implemented in any programming language.
 
 Also, instead of teaching specific machine learning algorithms, I try to explain why
-machine learning works, increasing awareness of its pitfalls and limitations. For that, I
-assume you have a strong mathematical and statistical background.
+machine learning works, thereby increasing awareness of its pitfalls and limitations.
+For this purpose, I assume you have a strong mathematical and statistical foundation.
 
 One important artificial constraint I have imposed in the material (for the sake of the
 course) is that I only consider predictive methods, more specifically inductive ones. I do
@@ -43,7 +43,7 @@ science solutions.
 
 Note that, in this book, I openly express my opinions and beliefs. On several occasions it
 may sound controversial.  I am not trying to be rude or to demean any researcher or
-practitioner in the field.  I am simply trying to be honest and transparent.
+practitioner in the field; rather, I aim to be honest and transparent.
 
 \vspace{1em}
 \emph{I'd rather be bold and straightforward than cower about my beliefs.}
