Working on proofreading and light editing.

--- a/about.tex
+++ b/about.tex
@@ -8,7 +8,7 @@ Federal University of São Paulo (UNIFESP) in Brazil.  I have been teaching this
 since 2021, and I have continually updated the material each year.
 
 Also, I was the coordinator of the Data Science Specialization Program (CEDS) at ITA.
-That experience, which included a significant amount of administrative work, as well as teaching and
+That experience, which included a great deal of administrative work, as well as teaching and
 supervising professionals in the course, has helped me to understand the needs of the
 market and the students.
 
@@ -59,7 +59,7 @@ Hope you enjoy reading.
   contribute to the book. Contributors will be acknowledged here.
 \end{parwithqr}
 
-\vfill
+\vspace{3em}
 
 \begin{lparwithqr}{https://leanpub.com/dsp}
   However, if you like this book, consider purchasing the e-book version at
@@ -67,7 +67,7 @@ Hope you enjoy reading.
   and write new books.
 \end{lparwithqr}
 
-\vfill
+\vspace{3em}
 
 \begin{parwithqr}{https://github.com/verri/dsp-book/discussions}
   If you have suggestions or questions, please open or join a discussion at
@@ -75,7 +75,7 @@ Hope you enjoy reading.
   Theoretical discussions and practical advice are also welcome.
 \end{parwithqr}
 
-\vfill
+\vspace{3em}
 
 % TODO: link to GitHub
 \begin{lparwithqr}{https://comp.ita.br/\~verri/dsp-book-print}
@@ -84,7 +84,7 @@ Hope you enjoy reading.
   \href{\aurl}{comp.ita.br/\textasciitilde{}verri/dsp-book-print}.
 \end{lparwithqr}
 
-\vfill
+\vspace{3em}
 
 \begin{parwithqr}{https://www.buymeacoffee.com/verri}
   If you want to support me, you can \emph{purchase a coffee} at
