--- a/history.tex
+++ b/history.tex
@@ -6,24 +6,24 @@
 go on till you come to the end: then stop.''\par\raggedleft--- \textup{Lewis
 Carroll}, Alice in Wonderland}
 
-There are many points of view about the beginning of data science.  For the sake of
+There are many points of view regarding the origin of data science.  For the sake of
 contextualization, I separate the topic into two approaches: the history of the term itself
 and a broad timeline of data-driven sciences, highlighting the important figures in each
 age.
 
 I believe that the history of the term is important for understanding the context of the
-discipline. Over the years, the term has been used to label quite different fields of
-study.  Before presenting my view on the term, I present the views of two important
+discipline. Over the years, the term has been employed to label quite different fields of
+study.  Before presenting my view on the term, I present the views of two influential
 figures in the history of data science: Peter Naur and William Cleveland.
 
-Moreover, studying the main facts and figures in the history of data-driven sciences
-enables us to understand the evolution of the field and hopefully guide us to evolve it
+Moreover, studying the key facts and figures in the history of data-driven sciences
+enables us to comprehend the evolution of the field and hopefully guide us towards evolving it
 further.  Besides, history also teaches us ways to avoid repeating the same mistakes.
 
-Most of the important theories and methods in data science have been developed
+Most of the significant theories and methods in data science have been developed
 simultaneously across different fields, such as statistics, computer science, and engineering.
 The history of data-driven sciences is long and rich. I present a timeline of the ages of
-data handling and the most important markers of data analysis.
+data handling and the most important milestones of data analysis.
 
 I do not intend to provide a comprehensive history of data science.  I aim to provide
 enough context to support the development of the material in the following chapters,
@@ -55,8 +55,8 @@ sometimes avoiding directions that are not relevant in the context of inductive 
   \begin{itemize}
     \itemsep0em
     \item Understand the history of the term ``data science.''
-    \item Understand the major milestones in the history of data-driven sciences.
-    \item Identify important figures in the history of data-driven sciences.
+    \item Recognize the major milestones in the history of data-driven sciences.
+    \item Identify important figures to the field of data-driven sciences.
   \end{itemize}
 
   \boxsubtitle{Takeaways}
@@ -66,7 +66,7 @@ sometimes avoiding directions that are not relevant in the context of inductive 
     \item We have evolved both in terms of theory and application of data-driven sciences.
     \item There is no consensus on the definition of data science (including which fields
       it encompasses).
-    \item However, there is enough evidence to support data science as a new science.
+    \item However, there is sufficient evidence to support data science as a new science.
   \end{itemize}
 \end{mainbox}
 
@@ -735,8 +735,8 @@ breakthroughs in the field, winning the 2018 Turing Award\footnote{\url{https://
 
 \paragraph{LUSI learning theory}
 
-In 2010s, \citeauthor{Vapnik2015}\footfullcite{Vapnik2015} proposed the \gls{lusi}
-principle, which is an extension of the statistical learning theory.  The \gls{lusi}
+In the 2010s, \citeauthor{Vapnik2015}\footfullcite{Vapnik2015} proposed the \gls{lusi}
+principle, which is an extension of statistical learning theory.  The \gls{lusi}
 theory is based on the concept of statistical invariants, which are properties of
 the data that are preserved under transformations.  The theory is the foundation of the
 learning from intelligent teachers paradigm.  They regard the \gls{lusi} theory as the
